--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gh-pages": "^3.2.3",
     "handlebars": "^4.7.7",
     "notiflix": "^3.0.2",
+    "lodash.debounce": "^4.0.8",
     "regenerator-runtime": "^0.13.9"
   }
 }
